desining part done

--- a/src/Components/Booking/Booking.css
+++ b/src/Components/Booking/Booking.css
@@ -10,3 +10,7 @@
     background-color:goldenrod;
     padding:2px;
 }
+.booking-body{
+    background-image:url(../../fakeData/Rectangle\ 1.png);
+    height: 700px;
+}
