--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -14,3 +14,8 @@
     background-color: goldenrod;
 
 }
+
+.home-body{
+    background-image: url(../../fakeData/Rectangle\ 1.png);
+    height: 700px;
+}
