--- a/src/Components/Create/Create.css
+++ b/src/Components/Create/Create.css
@@ -5,3 +5,13 @@
 .button{
     width:80%;
 }
+.fb-button{
+    padding:5px;
+    width:80%;
+    background-color:white;
+    border:none;
+}
+.img-fluid{
+    height:30px;
+    width:35px;
+}
