--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,10 +1,11 @@
 .container{
     padding-top:100px;
+    padding-bottom: 100px;
 }
-.place{
+/* .place{
     margin-right: 0px;
     padding-right: 0px;
-}
+} */
 .name{
     color:white;
 }
@@ -14,8 +15,11 @@
     background-color: goldenrod;
 
 }
-
 .home-body{
-    background-image: url(../../fakeData/Rectangle\ 1.png);
-    height: 700px;
+    background-image:    url(../../fakeData/Rectangle\ 1.png);
+    background-size:     cover;                     
+    background-repeat:   no-repeat;
+    background-position: center center;  
+    /* height:650px; */
 }
+
