--- a/src/Components/HotelPlace/HotelPlace.css
+++ b/src/Components/HotelPlace/HotelPlace.css
@@ -1,7 +1,12 @@
 .container-body{
     border-top: 1px solid lightgrey;
 }
-.map-area{
+/* .map-area{
     border:1px solid lightgrey;
     border-radius:5px;
-}
+    height:200px;
+} */
+/* .main-map{
+    height:100%;
+    width: 100%;      
+}  */
